// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/zoroplay/feeds-service/grpc/odds";
option java_multiple_files = true;
option java_package = "com.github.zoroplay.grpc";
option java_outer_classname = "OddsStatus";

package protobuf;

// The Odds service definition.
service Odds {
  // Sends GetOdds status request
  rpc GetOdds (GetOddsRequest) returns (GetOddsReply) {}
  rpc GetProducerStatus (ProducerStatusRequest) returns (ProducerStatusReply) {}
  rpc GetProbability (GetOddsRequest) returns (Probability) {}

}

// The request message containing the selection details.
message GetOddsRequest {
  int32 producerID = 1;
  int32 eventID = 2;
  int32 marketID = 3;
  string specifier = 4;
  string outcomeID = 5;
}

// The response message containing the odds status
message GetOddsReply {
  float odds = 1;
  int32 status = 2;
  string statusName = 3;
  int32 active = 4;
}

// The request message containing the producerID.
message ProducerStatusRequest {
  int32 producer = 1;
}

// The response message containing the producer status
message ProducerStatusReply {
  int32 status = 1;
}

message Probability {
  float probability = 1;
}
